{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 40,
  "lineage": "25f81df1-d06f-a922-7608-828877e2e8dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "youtube_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-1::instance/i-177037f93bb92d401",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-177037f93bb92d401",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-f395a02592bfd5eb6"
              }
            ],
            "primary_network_interface_id": "eni-f395a02592bfd5eb6",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "None",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-fbaa71e277bb38bde",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-7921a02a0a23e991e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4fcb6cedda8ba9ad6",
            "tags": {
              "Name": "youtube-instance"
            },
            "tags_all": {
              "Name": "youtube-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-7921a02a0a23e991e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "i-177037f93bb92d401",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.youtube_sg",
            "aws_subnet.youtube_sub1",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "youtube_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-1::instance/i-8b91148675a549bd3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-8b91148675a549bd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-ba3de74b96cc99e4c"
              }
            ],
            "primary_network_interface_id": "eni-ba3de74b96cc99e4c",
            "private_dns": "ip-10-0-2-4.ec2.internal",
            "private_ip": "10.0.2.4",
            "public_dns": "None",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-08c2bb474af093c0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-7921a02a0a23e991e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-17e043c1802c11f91",
            "tags": {
              "Name": "youtube-instance-2"
            },
            "tags_all": {
              "Name": "youtube-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-7921a02a0a23e991e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "i-8b91148675a549bd3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.youtube_sg",
            "aws_subnet.youtube_sub2",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "youtube_instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-1::instance/i-b146952f529cc43d7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-b146952f529cc43d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-f8c2c7fc1b6ec2dd6"
              }
            ],
            "primary_network_interface_id": "eni-f8c2c7fc1b6ec2dd6",
            "private_dns": "ip-10-0-3-4.ec2.internal",
            "private_ip": "10.0.3.4",
            "public_dns": "None",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-ec9b7ad3f85ad095e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-7921a02a0a23e991e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4e829f0c818195073",
            "tags": {
              "Name": "youtube-instance-3"
            },
            "tags_all": {
              "Name": "youtube-instance-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-7921a02a0a23e991e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "i-b146952f529cc43d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.youtube_sg",
            "aws_subnet.youtube_sub3",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "youtube_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-8f24d5111f080d466",
            "id": "igw-8f24d5111f080d466",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-igw"
            },
            "tags_all": {
              "Name": "youtube-igw"
            },
            "vpc_id": "vpc-a3e7458eb6601e8d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "youtube_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-8a35128856796ad47",
            "id": "rtb-8a35128856796ad47",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-8f24d5111f080d466",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a3e7458eb6601e8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "",
            "id": "rtb-8a35128856796ad47",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.youtube_igw",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "youtube_rta_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-3b5a0a4cc9a1147d1",
            "region": "us-east-1",
            "route_table_id": "rtb-8a35128856796ad47",
            "subnet_id": "subnet-4fcb6cedda8ba9ad6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.youtube_igw",
            "aws_route_table.youtube_rt",
            "aws_subnet.youtube_sub1",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "youtube_rta_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-52bcf94aa75a9cc75",
            "region": "us-east-1",
            "route_table_id": "rtb-8a35128856796ad47",
            "subnet_id": "subnet-17e043c1802c11f91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.youtube_igw",
            "aws_route_table.youtube_rt",
            "aws_subnet.youtube_sub2",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "youtube_rta_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-4bbd2c2b15789c04f",
            "region": "us-east-1",
            "route_table_id": "rtb-8a35128856796ad47",
            "subnet_id": "subnet-4e829f0c818195073"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.youtube_igw",
            "aws_route_table.youtube_rt",
            "aws_subnet.youtube_sub3",
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "youtube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-7921a02a0a23e991e",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-7921a02a0a23e991e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "youtube-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-a3e7458eb6601e8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "",
            "id": "sg-7921a02a0a23e991e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "youtube_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-4fcb6cedda8ba9ad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-4fcb6cedda8ba9ad6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-subnet-1"
            },
            "tags_all": {
              "Name": "youtube-subnet-1"
            },
            "vpc_id": "vpc-a3e7458eb6601e8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-4fcb6cedda8ba9ad6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "youtube_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-17e043c1802c11f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-17e043c1802c11f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-subnet-2"
            },
            "tags_all": {
              "Name": "youtube-subnet-2"
            },
            "vpc_id": "vpc-a3e7458eb6601e8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-17e043c1802c11f91",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "youtube_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:subnet/subnet-4e829f0c818195073",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-4e829f0c818195073",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-subnet-3"
            },
            "tags_all": {
              "Name": "youtube-subnet-3"
            },
            "vpc_id": "vpc-a3e7458eb6601e8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-4e829f0c818195073",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.youtube"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "youtube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-a3e7458eb6601e8d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-820d281f5fa8b6904",
            "default_route_table_id": "rtb-8863f9d9fd2a89f1f",
            "default_security_group_id": "sg-a7cb16d288a8e6445",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-a3e7458eb6601e8d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-8863f9d9fd2a89f1f",
            "owner_id": "000000000000",
            "region": "us-east-1",
            "tags": {
              "Name": "youtube-vpc"
            },
            "tags_all": {
              "Name": "youtube-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}